Add documentation (auth, users)
